2002-03-20  Jody Goldberg <jody@gnome.org>

	* src/cellspan.c (cell_calc_span) : Fix span calc when spanning
	  through hidden columns with content there was a typo, and a logic
	  error.  No need to change the margin for an invisible column.

2002-03-18  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=75193
	* src/xml-io.c (xml_sheet_read) : look at the right node.

2002-03-15  Jody Goldberg <jody@gnome.org>

	* src/expr.c (cellref_relocate) : don't use the ultra safe reference
	  checks here, we WANT to know if things are out of bounds.
	  back port some relocation fixes : We need to bounds check in->in rel
	  movement.

2002-03-09  Jody Goldberg <jody@gnome.org>

	* Release 1.0.5

2002-03-09  Jody Goldberg <jody@gnome.org>

	* src/func.c (copy_hash_table_to_ptr_array) : when dumping a function
	  ensure that it has been loaded.

	* src/validation.c (validation_eval) : back port some fixes.

	* src/eval.c (micro_hash_init) : back port fix.

2002-03-05  Jody Goldberg <jody@gnome.org>

	* src/eval.c (dependent_unlink) : fix typo.

2002-03-02  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-cell-comment.c (comment_get_points) : fix 1 pixel
	  offset from right edge.

2002-02-28  Jody Goldberg <jody@gnome.org>

	* src/eval.c (handle_tree_deps) : disregard inactive names.

2002-02-26  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (workbook_control_gui_init) : handle the
	  reording of ins col/row in the insert menu.

2002-02-25  Morten Welinder  <terra@diku.dk>

	Back-port from HEAD:
	* src/mstyle.c (mstyle_to_string): Missing g_strdup added for
 	sanity check, just in case.
	* src/summary.c (summary_item_as_text): Ditto.
	* src/value.c (value_get_as_string): Ditto.

2002-02-24  Almer S. Tigelaar  <almer@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=72416
	http://bugzilla.gnome.org/show_bug.cgi?id=71783
	* src/stf-export.c (stf_export_cell):
	Honor the 'never' quote setting and fix a subtle