@@ -1,3 +1,7 @@
+2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>
+
+	* src/analysis-tools.c (set_cell_value) : plug leak
+	
 2002-03-20  Jody Goldberg <jody@gnome.org>
 
 	* src/cellspan.c (cell_calc_span) : Fix span calc when spanning
