@@ -543,8 +543,10 @@ set_cell_value (data_analysis_output_t *dao, int col, int row, Value *v)
 	 */
 	if (dao->type == RangeOutput &&
 	    (dao->cols > 1 || dao->rows > 1) &&
-	    (col >= dao->cols || row >= dao->rows))
-	        return;
+	    (col >= dao->cols || row >= dao->rows)) {
+		value_release (v);
+		return;
+	}
 
 	cell = sheet_cell_fetch (dao->sheet, dao->start_col + col,
 				 dao->start_row + row);
